--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "Server side rendering project",
   "main": "index.js",
   "scripts": {
-    "dev:watch:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "dev:build:server": "webpack --config webpack.server.js --watch"
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build:server": "webpack --config webpack.server.js --watch",
+    "dev:build:client": "webpack --config webpack.client.js --watch"
   },
   "author": "Anthony Freda",
   "license": "ISC",
